<resources>
    <string name="app_name">Finanças Droid</string>
    <string name="action_cadastrar_categoria">Cadastrar Categorias</string>
    <string name="action_cadastrar_lancamento">Inserir Lançamento</string>
    <string name="action_listar_creditos_mensais">Listar Créditos Mensais</string>
    <string name="action_listar_debitos_mensais">Listar Débitos Mensais</string>
    <string name="action_listar_orcamento_final">Listar Orcamento Final</string>
    <string name="action_exibir_grafico">Gráfico de Pizza</string>


    <string name="title_activity_categoria">Categoria</string>
    <string name="title_activity_criar_categoria">Criar Categoria</string>
    <string name="title_activity_lancamento">Lançamento</string>
    <string name="title_activity_criar_lancamento">Criar Lançamento</string>
    <string name="title_activity_creditos_mensais">Créditos Mensais</string>
    <string name="title_activity_debitos_mensais">Débitos Mensais</string>
    <string name="title_activity_orcamento_final">Orçamento Final</string>
    <string name="title_activity_grafico">Gráfico</string>
    <string name="title_activity_attLancamento">Atualizar Lançamento</string>
</resources>